fix: layout issues

--- a/src/app/layouts/app/app.component.scss
+++ b/src/app/layouts/app/app.component.scss
@@ -113,13 +113,13 @@ ion-segment {
 @media only screen and (max-width: 1100px) {
   header {
     .logo {
-      min-width: 70px;
+      min-width: 60px;
     }
   }
 
   ion-segment {
     &.desktopScreen {
-      margin-left: 0;
+      margin-left: 10px;
     }
   }
 }
