--- a/src/app/pages/avatar/avatar.page.scss
+++ b/src/app/pages/avatar/avatar.page.scss
@@ -46,7 +46,7 @@ a.cursor {
   }
 }
 
-@media only screen and (max-width: 405px) and (max-height: 670px) {
+@media only screen and (max-width: 405px) and (max-height: 750px) {
   .preview {
     height: 276px;
     background-size: 400px;
